# webgl_gfx

./: .gitignore  .gitmodules  Cargo.toml  package.json
js/: index.js
src/: lib.rs  renderer.rs  wasm_platform.rs
src/data/: quad.frag.spv  quad.vert.spv
static/: index.html
