[package]
name = "webgl-gfx"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gfx-hal = "0.4.1"
gfx-backend-empty = "0.4.0"
gfx-backend-gl = "0.4.0"
log = "0.4.8"
failure ="0.1.6"
image = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
winit = {version = "0.21.0", features=['web-sys']}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement'
]

