[package]
name = "webgl-gfx"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "gfx-backend-gl/glutin"]
wgl = ["gfx-backend-gl", "gfx-backend-gl/wgl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
gfx-hal = "0.4.1"
gfx-backend-empty = "0.4.0"

log = "0.4.8"
failure ="0.1.6"
image = "0.23.0"
winit = {version = "0.21.0", features=['web-sys']}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.7.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement'
]



[dependencies.gfx-backend-gl]
version = "0.4"
optional = true


[dependencies.gfx-backend-vulkan]
version = "0.4"
features = ["x11"]
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.4"
optional = true